# mcp-for-page-builders

./: .gitignore  Cargo.toml  DOCKER.md  README.md  docker-compose.test.yml
.github/workflows/: ci.yml
assets/: SKILL.md  agent.json  agent_prompt.md  agents_md_row.txt
src/: args.rs  cdp.rs  elementor.rs  lib.rs  main.rs  mcp.rs  session.rs  setup.rs  util.rs  wp.rs
src/elementor/: mod.rs  ops.rs  service.rs  tree.rs
src/tools/: auth.rs  bridge.rs  cache.rs  clone.rs  css_map.rs  editor.rs  element.rs  ensure_site.rs  file_io.rs  global.rs  inspect.rs  install_config.rs  media.rs  mod.rs  option.rs  page.rs  post.rs  schema.rs  seed.rs  session_state.rs  settings.rs  setup_wizard.rs  site.rs  template.rs  visual.rs  wp_api.rs
src/tools/bridge/: create_widget.rs  install_bridge.rs  mod.rs
src/tools/element/: add_element.rs  duplicate_element.rs  find_elements.rs  get_element.rs  get_element_tree.rs  mod.rs  move_element.rs  patch_elements.rs  remove_element.rs  update_element.rs
src/tools/file_io/: backup_page.rs  download_page.rs  mod.rs  upload_page.rs
src/tools/global/: delete_global_color.rs  delete_global_typography.rs  get_global_colors.rs  get_global_typography.rs  mod.rs  set_global_color.rs  set_global_typography.rs
src/tools/option/: get_wp_option.rs  mod.rs  set_wp_option.rs
src/tools/page/: create_page.rs  delete_page.rs  get_page.rs  get_page_by_slug.rs  list_pages.rs  mod.rs  update_page.rs
src/tools/post/: create_post.rs  delete_post.rs  get_post.rs  list_posts.rs  mod.rs  update_post.rs
src/tools/schema/: get_widget_schema.rs  list_widgets.rs  mod.rs  registry.rs  validate_element.rs  widget_schema.rs
src/tools/settings/: get_experiments.rs  get_kit_defaults.rs  get_kit_schema.rs  mod.rs  set_experiment.rs
src/tools/template/: create_template.rs  delete_template.rs  get_template.rs  list_templates.rs  mod.rs  update_template.rs
src/tools/visual/: extract_styles.rs  match_styles.rs  mod.rs  screenshot.rs  screenshot_page.rs  visual_compare.rs  visual_diff.rs
src/types/: element.rs  mod.rs  request.rs  response.rs  tool.rs  tool_def.rs  tool_result.rs
tests/: e2e.rs  e2e_persistent.rs  helpers.rs  integration.rs  run.sh  unit.rs
