[package]
name = "elementor-mcp"
version = "0.2.0"
edition = "2024"
description = "High-performance MCP server for WordPress Elementor — page CRUD, element operations, global design tokens, visual comparison, CDP-based DOM inspection"
license = "BSL-1.1"
repository = "https://github.com/juslintek/mcp-for-page-builders"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
rand = "0.9"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chromiumoxide = "0.9"
futures = "0.3"
