[package]
name = "elementor-mcp"
version = "0.2.0"
edition = "2024"
description = "High-performance MCP server for WordPress Elementor — page CRUD, element operations, global design tokens, visual comparison, CDP-based DOM inspection"
license = "BSL-1.1"
repository = "https://github.com/juslintek/mcp-for-page-builders"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
rand = "0.9"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chromiumoxide = "0.9"
futures = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# ── Base groups ────────────────────────────────────────────────────────────────
all        = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }

# ── OOP-favoring restriction lints ─────────────────────────────────────────────
# Prefer Self over concrete type names (OOP self-reference)
use_self                    = "warn"
# Builder pattern: return Self should be #[must_use]
return_self_not_must_use    = "warn"
# Prefer &self methods over free functions
unused_self                 = "warn"
# Explicit impl over derive where possible
# Encapsulation: don't leak implementation details
wildcard_enum_match_arm     = "warn"

# ── Sensible allows (too noisy or false-positive-prone for this codebase) ──────
module_name_repetitions     = "allow"
missing_errors_doc          = "allow"
missing_panics_doc          = "allow"
must_use_candidate          = "allow"
redundant_pub_crate         = "allow"
future_not_send             = "allow"
option_if_let_else          = "allow"
significant_drop_tightening = "allow"
